Add page for resume

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
             <a href="/batarim-logger">Batarim Logger</a>
           </li>
           <li {% if page.active == "resume" %}class="active"{% endif %}>
-            <a href="">Resume</a>
+            <a href="/resume">Resume</a>
           </li>
         </ul>
       </div>
