Qualify title for posts for Disqus

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'beyondtechnicallycorrect'; // required: replace example with your forum shortname
             var disqus_url = 'http://beyondtechnicallycorrect.com{{ page.url | remove: "/index.html" }}/';
+            var disqus_title = '{{ page.title }}';
 
             /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
