--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,7 @@
             var disqus_shortname = 'beyondtechnicallycorrect'; // required: replace example with your forum shortname
             var disqus_url = 'http://beyondtechnicallycorrect.com{{ page.url | remove: "/index.html" }}/';
             var disqus_title = '{{ page.title }}';
+            var disqus_identifier = '{{ page.id }}';
 
             /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
