--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'beyondtechnicallycorrect'; // required: replace example with your forum shortname
             var disqus_url = 'http://beyondtechnicallycorrect.com{{ page.url | remove: "/index.html" }}/';
-            var disqus_title = '{{ page.title }}';
+            var disqus_title = "{{ page.title }}";
             var disqus_identifier = '{{ page.id }}';
 
             /* * * DON'T EDIT BELOW THIS LINE * * */
