Link directly to resume instead of through iframe

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
             <a href="/batarim-logger">Batarim Logger</a>
           </li>
           <li {% if page.active == "resume" %}class="active"{% endif %}>
-            <a href="/resume">Resume</a>
+            <a href="https://s3.amazonaws.com/btc-assets/resume-online.pdf">Resume</a>
           </li>
         </ul>
       </div>
