--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,8 @@
     <title>Beyond Technically Correct</title>
     <link rel="canonical"
           href="http://beyondtechnicallycorrect.com{{ page.url | remove: '/index.html' }}/">
+    <link rel="alternate" type="application/rss+xml"
+          title="Beyond Technically Correct" href="/feed.xml">
     <link rel="stylesheet" href="/css/flatly.bootstrap.min.css">
     <link rel="stylesheet" href="/css/syntax.css">
     <link rel="stylesheet" href="/css/index.css">
