--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beyond Technically Correct</title>
     <link rel="canonical"
-          href="http://beyondtechnicallycorrect.com{{ page.url | remove: '/index.html' }}/">
+          href="http://beyondtechnicallycorrect.com{{ page.url | remove: 'index.html' }}">
     <link rel="alternate" type="application/rss+xml"
           title="Beyond Technically Correct" href="/feed.xml">
     <link rel="stylesheet" href="/css/flatly.bootstrap.min.css">
