--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Beyond Technically Correct</title>
+    <title>{% if page.title %}{{ page.title }} - {% endif %}Beyond Technically Correct</title>
     <link rel="canonical"
           href="http://beyondtechnicallycorrect.com{{ page.url | remove: 'index.html' }}">
     <link rel="alternate" type="application/rss+xml"
