--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,9 @@
             </time>
           </div>
         </header>
-        {{ content }}
+        <main>
+          {{ content }}
+        </main>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
