Make HTTPS the default

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if page.title %}{{ page.title }} - {% endif %}Beyond Technically Correct</title>
     <link rel="canonical"
-          href="http://www.beyondtechnicallycorrect.com{{ page.url | remove: 'index.html' }}">
+          href="https://www.beyondtechnicallycorrect.com{{ page.url | remove: 'index.html' }}">
     <link rel="alternate" type="application/rss+xml"
           title="Beyond Technically Correct" href="/feed.xml">
     <link rel="stylesheet" href="/css/flatly.bootstrap.min.css">
