--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'beyondtechnicallycorrect'; // required: replace example with your forum shortname
-            var disqus_url = 'http://beyondtechnicallycorrect.com{{ page.url | remove: "index.html" }}';
+            var disqus_url = 'https://beyondtechnicallycorrect.com{{ page.url | remove: "index.html" }}';
             var disqus_title = "{{ page.title }}";
             var disqus_identifier = '{{ page.id }}';
 
