Add link to Wizard Scorekeeper

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,6 +42,9 @@
           <li {% if page.active == "batarim-logger" %}class="active"{% endif %}>
             <a href="/batarim-logger">Batarim Logger</a>
           </li>
+          <li>
+            <a href="https://wizard-scorekeeper.beyondtechnicallycorrect.com/">Wizard Scorekeeper</a>
+          </li>
           <li {% if page.active == "resume" %}class="active"{% endif %}>
             <a href="https://s3.amazonaws.com/btc-assets/resume-online.pdf">Resume</a>
           </li>
