--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,15 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js">
         </script>
     <![endif]-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EJLT8C83ZG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-EJLT8C83ZG');
+    </script>
   </head>
   <body>
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
